[package]
name = "prodjlink-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
dashmap = "6"
if-addrs = "0.13"
mac_address = "1"
socket2 = { version = "0.5", features = ["all"] }
async-trait = "0.1.89"

[dev-dependencies]
tokio-test = "0.4"
