[package]
name = "prodjlink-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "2"
tracing = "0.1"
dashmap = "6"
if-addrs = "0.13"
mac_address = "1"
socket2 = { version = "0.5", features = ["all"] }
async-trait = "0.1.89"
sha1 = "0.10"

[dev-dependencies]
tokio-test = "0.4"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.28"

[[example]]
name = "virtual-cdj3000"
path = "examples/virtual_cdj3000.rs"
